Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- updated Brazilian Portuguese translations (Thanks to Mario Olimpio de Menezes
  <mario [at] curiango.ipen.br>)
-
Bug fixes:
~~~~~~~~~~
- fix: impossible to create or upgrade a site using CPSBoxes
- fix : update Zope-2.7.x -> Zope-2.8.x
- fix : bug in getImgTag()
- BBB : CPSDefault.utils.getHtmlBody
- #852 : make logged_in more customizable
- Fix for 3.2 migration
- #914 : Existing instances of 'News' document type are broken.
-  #685 : when publishing a content, a warning should be raised if no section is chosen
- revert [27616]
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Small refactoring of folder_localrole_edit.py to move setting `reindex` out
  of loop.
- Added the printLogErrors method to CPSTestCase to be able to get ZLOG logs
  when running unit tests.