@@ -15,8 +15,10 @@ Bug fixes:
 - #852 : make logged_in more customizable
 - Fix for 3.2 migration
 - #914 : Existing instances of 'News' document type are broken.
--  #685 : when publishing a content, a warning should be raised if no section is chosen
+- #685 : when publishing a content, a warning should be raised if no section is chosen
 - revert [27616]
+- Made CPSOOo installation in cpsinstall.py not hide the import error by
+  displaying the exact import error message. This partly fixes #1037.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Small refactoring of folder_localrole_edit.py to move setting `reindex` out
